feat(all): 初步完成页面

--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,13 @@ body {
     margin: 0;
 }
 
+.layout-content {
+    margin: 24px 16px;
+    padding: 24px;
+    background: #fff;
+    min-height: 280px;
+}
+
 #components-layout-demo-custom-trigger .trigger {
     font-size: 18px;
     line-height: 64px;
