--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,8 @@ body {
 
 #components-layout-demo-custom-trigger .logo {
     height: 32px;
-    background: rgba(255, 255, 255, 0.2);
+    color: white;
+    font-size: large;
+    text-align:center;
     margin: 16px;
 }
